--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <title>Random Number Generator Visualizer</title>
-  <link rel="stylesheet" href="rng.css" type="text/css" />
-  <script src="rng.js"></script>
-  <script src="rngUI.js"></script>
+  <link rel="stylesheet" href="app.css" type="text/css" />
+  <script src="app.js"></script>
 </head>
 <body>
   <h2>Random Number Generator Visualizer</h2>
