Refactorization (including RNG library)

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <option value="randu">IBM RANDU</option>
       <option value="clib">C Standard Library</option>
       <option value="mswin">Microsoft Windows (until XP)</option>
-      <option value="worshift">Xorshift</option>
+      <option value="xorshift">Xorshift</option>
       <option value="mersenne">Mersenne Twister</option>
                             </select><br />
     <input type="button" id="visualize" value="Visualize" />
